--- a/src/components/playColumn/playerRenameModal/playerRenameModal.module.scss
+++ b/src/components/playColumn/playerRenameModal/playerRenameModal.module.scss
@@ -36,6 +36,7 @@
         border: var(--border-medium);
         border-radius: var(--border-radius-sm);
         background-color: var(--color-background);
+        color: var(--color-text);
         margin-bottom: 2rem;
     }
 
@@ -55,6 +56,7 @@
         border: var(--border-medium);
         border-radius: var(--border-radius-sm);
         background-color: var(--color-background-accent);
+        color: var(--color-text);
     }
 
     &__affirmativeAction {
@@ -64,6 +66,7 @@
         border: var(--border-medium);
         border-radius: var(--border-radius-sm);
         background-color: var(--color-background-accent);
+        color: var(--color-text);
     }
 
     &__negativeAction {
@@ -73,5 +76,6 @@
         border: var(--border-medium);
         border-radius: var(--border-radius-sm);
         background-color: var(--color-danger-red);
+        color: var(--color-text);
     }
 }
